--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,36 @@
 	<title>Awesome Weather</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="main.js"></script>
+
+	<!-- Bootstrap (and JQUERY) links -->
+	<script
+  src="http://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="container">
 
 	<h1>Awesome Weather</h1>
+
+	<div class="form-inline" id="inputForm">
+		<input type="text" class="form-control" name="zipInput" placeholder="e.g. 80301">
+		<button type="button" class="btn btn-success">Get Weather</button>
+	</div>
+
+	<div id="error" class="panel panel-danger">
+		<div class="panel-heading">
+			<h3 class="panel-title">Error</h3>
+		</div>
+		<div class="panel-body">
+		    Invalid zip code.  Please try again.
+		  </div>
+	</div>
+
+	<div id="output">
+		<p>This is the output</p>
+	</div>
 
 </body>
 </html>
