Made some panels for output

--- a/app/index.html
+++ b/app/index.html
@@ -28,11 +28,65 @@
 		</div>
 		<div class="panel-body">
 		    Invalid zip code.  Please try again.
-		  </div>
+		</div>
 	</div>
 
 	<div id="output">
-		<p>This is the output</p>
+
+		<div class="panel panel-info">
+		
+			<div class="panel-heading">
+				<h3 class="panel-title">City</h3>
+			</div>
+				<div class="panel panel-body">
+				    City goes here.
+			</div>
+		</div>
+
+		<div class="panel panel-info">
+		
+			<div class="panel-heading">
+				<h3 class="panel-title">Temperature</h3>
+			</div>
+				<div class="panel panel-body">
+				    
+				    <table class="table table-bordered">
+				    	<tr>
+				    		<th>Kelvin</th>
+				    		<th>Fahrenheit</th>
+				    		<th>Celsius</th>
+				    	</tr>
+				    	<tr>
+				    		<td>100 &deg;K</td>
+				    		<td>200 &deg;F</td>
+				    		<td>300 &deg;C</td>
+				    	</tr>
+				    </table>
+				    
+			</div>
+		</div>
+
+		<div class="panel panel-info">
+		
+			<div class="panel-heading">
+				<h3 class="panel-title">Current Conditions</h3>
+			</div>
+				<div class="panel panel-body">
+				    Conditions go here.
+			</div>
+		</div>
+
+		<div class="panel panel-info">
+		
+			<div class="panel-heading">
+				<h3 class="panel-title">Temperature Photo</h3>
+			</div>
+				<div class="panel panel-body">
+				    Photo goes here.
+			</div>
+		</div>
+
+		</div>
 	</div>
 
 </body>
