--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>Awesome Weather</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="text/javascript" src="main.js"></script>
 
 	<!-- Bootstrap (and JQUERY) links -->
 	<script
@@ -18,8 +17,8 @@
 	<h1>Awesome Weather</h1>
 
 	<div class="form-inline" id="inputForm">
-		<input type="text" class="form-control" name="zipInput" placeholder="e.g. 80301">
-		<button type="button" class="btn btn-success">Get Weather</button>
+		<input type="text" class="form-control" id="zipInput" placeholder="e.g. 12345">
+		<button type="button" class="btn btn-success" id="weatherButton">Get Weather</button>
 	</div>
 
 	<div id="error" class="panel panel-danger">
@@ -27,7 +26,7 @@
 			<h3 class="panel-title">Error</h3>
 		</div>
 		<div class="panel-body">
-		    Invalid zip code.  Please try again.
+		    <p id="errorMessage"></p>
 		</div>
 	</div>
 
@@ -39,7 +38,7 @@
 				<h3 class="panel-title">City</h3>
 			</div>
 				<div class="panel panel-body">
-				    City goes here.
+					<p id="cityOutput"></p>
 			</div>
 		</div>
 
@@ -57,12 +56,12 @@
 				    		<th>Celsius</th>
 				    	</tr>
 				    	<tr>
-				    		<td>100 &deg;K</td>
-				    		<td>200 &deg;F</td>
-				    		<td>300 &deg;C</td>
+				    		<td><p id="temperatureOutputK"></p></td>
+				    		<td><p id="temperatureOutputF"></p></td>
+				    		<td><p id="temperatureOutputC"></p></td>
 				    	</tr>
 				    </table>
-				    
+
 			</div>
 		</div>
 
@@ -72,7 +71,7 @@
 				<h3 class="panel-title">Current Conditions</h3>
 			</div>
 				<div class="panel panel-body">
-				    Conditions go here.
+					<p id="conditionsOutput"></p>
 			</div>
 		</div>
 
@@ -88,6 +87,8 @@
 
 		</div>
 	</div>
+
+<script type="text/javascript" src="main.js"></script>
 
 </body>
 </html>
