Getting results for temperature, city and conditions

--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Awesome Weather</title>
+	<title>Melanie's Weather App</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<!-- Bootstrap (and JQUERY) links -->
@@ -14,7 +14,7 @@
 </head>
 <body class="container">
 
-	<h1>Awesome Weather</h1>
+	<h1>Melanie's Weather App</h1>
 
 	<div class="form-inline" id="inputForm">
 		<input type="text" class="form-control" id="zipInput" placeholder="e.g. 12345">
@@ -71,14 +71,14 @@
 				<h3 class="panel-title">Current Conditions</h3>
 			</div>
 				<div class="panel panel-body">
-					<p id="conditionsOutput"></p>
+					<p id="conditionOutput"></p>
 			</div>
 		</div>
 
 		<div class="panel panel-info">
 		
 			<div class="panel-heading">
-				<h3 class="panel-title">Temperature Photo</h3>
+				<h3 class="panel-title">Photo Display of Temparature</h3>
 			</div>
 				<div class="panel panel-body">
 				    Photo goes here.
