--- a/app/index.html
+++ b/app/index.html
@@ -78,10 +78,10 @@
 		<div class="panel panel-info">
 		
 			<div class="panel-heading">
-				<h3 class="panel-title">Photo Display of Temparature</h3>
+				<h3 class="panel-title">Photo Display of Temperature</h3>
 			</div>
 				<div class="panel panel-body">
-				    Photo goes here.
+				    <img alt="" src="" id="weatherImage" width="400">
 			</div>
 		</div>
 
